--- a/1/1/ciepły-oddech/index.html
+++ b/1/1/ciepły-oddech/index.html
@@ -79,7 +79,7 @@ details[open] span::after {
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="POZa Linią">
 <meta property="og:locale" content="pl">
-<meta property="og:title" content="*[Ciepły oddech]">
+<meta property="og:title" content="&amp;ast;&amp;ast;&amp;ast;[Ciepły oddech]">
 <meta property="og:url" content="https://pozalinia.pl/1/1/ciep%C5%82y-oddech/">
 <meta property="og:image" content="https://pozalinia.pl/assets/piony_light.png">
 <meta name="twitter:card" content="summary_large_image">
