--- a/1/1/sernik-na-zimno/index.html
+++ b/1/1/sernik-na-zimno/index.html
@@ -79,7 +79,7 @@ details[open] span::after {
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="POZa Linią">
 <meta property="og:locale" content="pl">
-<meta property="og:title" content="*[Sernik na zimno]">
+<meta property="og:title" content="&amp;ast;&amp;ast;&amp;ast;[Sernik na zimno]">
 <meta property="og:url" content="https://pozalinia.pl/1/1/sernik-na-zimno/">
 <meta property="og:image" content="https://pozalinia.pl/assets/piony_light.png">
 <meta name="twitter:card" content="summary_large_image">
