--- a/1/2/opowieść-to-nie-odpowiedź/index.html
+++ b/1/2/opowieść-to-nie-odpowiedź/index.html
@@ -79,7 +79,7 @@ details[open] span::after {
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="POZa Linią">
 <meta property="og:locale" content="pl">
-<meta property="og:title" content="*[opowieść to nie odpowiedź błyski mniej]">
+<meta property="og:title" content="&amp;ast;&amp;ast;&amp;ast;[opowieść to nie odpowiedź błyski mniej]">
 <meta property="og:url" content="https://pozalinia.pl/1/2/opowie%C5%9B%C4%87-to-nie-odpowied%C5%BA/">
 <meta property="og:image" content="https://pozalinia.pl/assets/punkty_light.png">
 <meta name="twitter:card" content="summary_large_image">
